plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'jacoco'  // Add this line for JaCoCo
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
  	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  	implementation 'org.postgresql:postgresql'
	
	testImplementation 'com.jayway.jsonpath:json-path'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.test {
    testLogging {
        events "PASSED", "FAILED", "SKIPPED" // Show detailed output for tests
        exceptionFormat "full" // Show full stack trace for failed tests
        showStandardStreams = true // Show standard output and error streams
    }
}

jacoco {
    toolVersion = "0.8.10"
}

tasks.test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport // Run coverage report after tests
}

jacocoTestReport {
    dependsOn test
    reports {
        html.required = true  // Generates an HTML report
        xml.required = true   // Useful for CI tools like SonarQube
        csv.required = false  // CSV report (optional)
    }
}